--- a/samples/HelloWorldSwift/HelloWorldSwift/Info.plist
+++ b/samples/HelloWorldSwift/HelloWorldSwift/Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleName</key>
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundleDisplayName</key>
-	<string>MindfulEyes</string>
+	<string>MindfulEye</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
