--- a/samples/HelloWorldSwift/Midful-Eye.xcodeproj/xcshareddata/xcschemes/HelloWorldSwift.xcscheme
+++ b/samples/HelloWorldSwift/Midful-Eye.xcodeproj/xcshareddata/xcschemes/HelloWorldSwift.xcscheme
@@ -15,66 +15,69 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "EA5C22451A1E9078001F5117"
-               BuildableName = "HelloWorldSwift.app"
-               BlueprintName = "HelloWorldSwift"
-               ReferencedContainer = "container:HelloWorldSwift.xcodeproj">
+               BuildableName = "Midful-Eye.app"
+               BlueprintName = "Midful-Eye"
+               ReferencedContainer = "container:Midful-Eye.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Debug">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "EA5C22451A1E9078001F5117"
-            BuildableName = "HelloWorldSwift.app"
-            BlueprintName = "HelloWorldSwift"
-            ReferencedContainer = "container:HelloWorldSwift.xcodeproj">
+            BuildableName = "Midful-Eye.app"
+            BlueprintName = "Midful-Eye"
+            ReferencedContainer = "container:Midful-Eye.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </TestAction>
    <LaunchAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Debug"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
+      debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "EA5C22451A1E9078001F5117"
-            BuildableName = "HelloWorldSwift.app"
-            BlueprintName = "HelloWorldSwift"
-            ReferencedContainer = "container:HelloWorldSwift.xcodeproj">
+            BuildableName = "Midful-Eye.app"
+            BlueprintName = "Midful-Eye"
+            ReferencedContainer = "container:Midful-Eye.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "EA5C22451A1E9078001F5117"
-            BuildableName = "HelloWorldSwift.app"
-            BlueprintName = "HelloWorldSwift"
-            ReferencedContainer = "container:HelloWorldSwift.xcodeproj">
+            BuildableName = "Midful-Eye.app"
+            BlueprintName = "Midful-Eye"
+            ReferencedContainer = "container:Midful-Eye.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
